--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,19 @@ span {
   color: #f11203;
 }
 
+.header__socialmedia {
+  position: absolute; /* Position it absolutely relative to the nearest positioned parent */
+  top: 10px; /* 10 pixels from the top */
+  right: 10px; /* 10 pixels from the right */
+  z-index: 100; /* Ensure it stays on top of other content */
+}
+
+.socialmedia__icon {
+  width: 35px; /* Adjust size as needed */
+  height: 35px; /* Maintain aspect ratio */
+  cursor: pointer; /* Change cursor to pointer for better user experience */
+}
+
 .tickets-button {
   width: 60%;
   margin: 0 auto;
@@ -145,7 +158,7 @@ span {
 }
 
 .socialmedia__icon {
-  max-width: 28px;
+  outline: 1px solid #8bc9ff; /* Add a 2-pixel white outline */
   border-radius: 5px;
   transition: transform 0.2s;
 }
@@ -192,19 +205,19 @@ span {
   font-size: 4rem;
   color: rgb(255, 0, 0);
   font-family: "Mountains of Christmas", serif;
-  margin-top: 20px;
+  margin: 2rem 2rem 0 2rem;
 }
 .description__container .description__title h2 {
   font-size: 3rem;
   color: rgb(255, 0, 0);
   font-family: "Mountains of Christmas", serif;
-  margin-top: 1rem;
+  margin: 1rem 2rem 1rem 2rem;
 }
 .description__container .description__text {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #0f4218;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 1rem;
+  font-family: "Edu AU VIC WA NT Pre", cursive;
+  margin: 1rem 2rem 1rem 2rem;
   line-height: 1.6;
 }
 
@@ -286,6 +299,9 @@ span {
   }
   .announcement__container {
     font-size: 20px;
+  }
+  .dates__container .dates__text h2 {
+    font-size: 2rem;
   }
 }
 @media (min-width: 768px) {
