--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -33,6 +33,9 @@
     .entry-title {
       font-size: 70px;
     }
+    .emoji {
+      display: inline-block !important;
+    }
   }
   
   @media (max-width: 992px) {
