--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ span {
   margin: 0 auto;
 }
 .description__container .description__title h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   color: rgb(255, 0, 0);
   font-family: "Mountains of Christmas", serif;
   margin: 2rem 2rem 0 2rem;
@@ -218,12 +218,64 @@ span {
   font-family: "Mountains of Christmas", serif;
   margin: 1rem 2rem 1rem 2rem;
 }
-.description__container .description__text {
-  font-size: 1.5rem;
-  color: #0f4218;
-  font-family: "Edu AU VIC WA NT Pre", cursive;
-  margin: 1rem 2rem 1rem 2rem;
+.description__container .description__subtitle {
+  margin: 3rem 2rem 1rem 2rem;
+}
+.description__container .description__subtitle strong {
+  font-size: 1.5rem; /* Large font size */
+  color: #fff; /* White text color */
+  font-family: "Luckiest Guy", cursive; /* Font style */
+  text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.8); /* Red shadow effect */
   line-height: 1.6;
+}
+.description__container .description__text {
+  margin: 1rem 2rem 1rem 2rem;
+}
+.description__container .description__text strong {
+  font-size: 2rem; /* Large font size */
+  color: #fff; /* White text color */
+  font-family: "Luckiest Guy", cursive; /* Font style */
+  text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.8); /* Red shadow effect */
+  line-height: 1.6;
+}
+.description__container .description__text p {
+  font-size: 1.5rem; /* Matches the font size of .description__text */
+  color: #0f4218; /* Matches the green text color */
+  font-family: "Annie Use Your Telescope", cursive;
+  margin: 1rem 0; /* Adds space between each list item */
+  line-height: 1.6; /* Improves readability */
+}
+.description__container .emoji {
+  display: none;
+}
+.description__container p {
+  font-size: 1.5rem; /* Matches the font size of .description__text */
+  color: #0f4218; /* Matches the green text color */
+  font-family: "Annie Use Your Telescope", cursive;
+  margin: 1rem 0; /* Adds space between each list item */
+  line-height: 1.6; /* Improves readability */
+}
+
+.event-highlights {
+  text-align: center; /* Centers the entire section */
+}
+
+.event-list {
+  list-style-type: none; /* Removes default bullet points */
+  padding: 0; /* Removes default padding */
+  margin: 1rem 0; /* Adds some space around the list */
+}
+
+.event-list li {
+  font-size: 1.5rem; /* Matches the font size of .description__text */
+  color: #0f4218; /* Matches the green text color */
+  font-family: "Annie Use Your Telescope", cursive;
+  margin: 1rem 0; /* Adds space between each list item */
+  line-height: 1.6; /* Improves readability */
+}
+.event-list li strong {
+  font-family: "Mountains of Christmas", serif;
+  color: #c90909;
 }
 
 .dates__container {
@@ -294,6 +346,13 @@ span {
   right: 10px;
 }
 
+.description__banner {
+  font-size: 2rem;
+  color: rgb(255, 0, 0);
+  font-family: "Mountains of Christmas", serif;
+  margin: 2rem 2rem 0 2rem;
+}
+
 @media (max-width: 768px) {
   .tickets-button a h3 {
     font-size: 30px;
@@ -318,6 +377,9 @@ span {
   }
   .entry-title {
     font-size: 70px;
+  }
+  .emoji {
+    display: inline-block !important;
   }
 }
 @media (max-width: 992px) {
